api/swim_form/src/tests/derive/form/double_header_body_attr.stderr
error: At most one field can replace the tag attribute body.
  --> $DIR/src/tests/derive/form/double_header_body_attr.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
